Update ScoreTagService.java Logic Add possibility to get reponse with text